# msvgd

./: pyproject.toml  tests.ipynb
msvgd/: msvgd.py
