[build-system]
requires = ["setuptools>=61.0,<68", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "msvgd"
version = "0.1.5"
description = "A JAX implementation of Mitotic Stein Variational Gradient Descent"
readme = "README.md"
license = { file = "LICENSE" }
requires-python = ">=3.8"
authors = [
  { name = "Jamie Liu" }
]
dependencies = [
  "jax",
  "optax"
]

[project.urls]
Homepage = "https://github.com/jsliu02/msvgd"